--- a/src/styles.css
+++ b/src/styles.css
@@ -113,12 +113,12 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e44c65;
+		color: #3fc8ff;
 		text-decoration: none;
 	}
 
 		a:hover {
-			color: #e44c65 !important;
+			color: #3fc8ff !important;
 			border-bottom-color: transparent;
 		}
 
@@ -2188,7 +2188,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #3fc8ff;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2257,7 +2257,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e44c65;
+			border-color: #3fc8ff;
 		}
 
 	select {
@@ -2360,7 +2360,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e44c65;
+			border-color: #3fc8ff;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2857,8 +2857,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		.button:hover,
 		.button:active {
-			box-shadow: inset 0 0 0 1px #e44c65;
-			color: #e44c65 !important;
+			box-shadow: inset 0 0 0 1px #3fc8ff;
+			color: #3fc8ff !important;
 		}
 
 		input[type="submit"]:active,
@@ -2900,7 +2900,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e44c65;
+			background-color: #3fc8ff;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -3141,15 +3141,15 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			border-color: #3fc8ff;
 		}
 
 		.spotlight.style2 .content {
-			border-color: #5480f1;
+			border-color: #cd28fd;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #39c088;
+			border-color: #1fff7d;
 		}
 
 		.spotlight.inactive .content {
@@ -3203,7 +3203,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #3fc8ff;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3238,7 +3238,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #3fc8ff !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3342,7 +3342,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #e44c65;
+				color: #3fc8ff;
 			}
 
 		.dropotron.level-0 {
@@ -3432,7 +3432,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #3fc8ff;
 					}
 
 					#header nav ul li > ul {
@@ -3454,7 +3454,7 @@ input, select, textarea {
 	#banner {
 		background-attachment: fixed;
 		background-color: #272833;
-		background-image: url("../../images/banner.jpg");
+		background-image: url("./assets/css/images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
@@ -3473,10 +3473,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("./assets/css/images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("./assets/css/images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("./assets/css/images/overlay.png");;
+			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("./assets/css/images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -3932,7 +3932,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #3fc8ff;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
