--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -3,5 +3,5 @@
 }
 
 #two {
-  background-image: url("../../../../public/cyber-banner.jpg");
+  background-image: url("../../../../public/pexels-aspasaric-2341282.jpg");
 }
