need to pull from nixtop

--- a/src/styles.css
+++ b/src/styles.css
@@ -3145,11 +3145,11 @@ input, select, textarea {
 		}
 
 		.spotlight.style2 .content {
-			border-color: #cd28fd;
+			border-color: #fdd228;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #1fff7d;
+			border-color: #cd28fd;
 		}
 
 		.spotlight.inactive .content {
