added header and footer components, imported and used

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -5,3 +5,7 @@
 #two {
   background-image: url("../../../../public/pexels-apasaric-2341282.jpg");
 }
+
+#three {
+  background-image: url("../../../../public/pexels-simon73-1323550.jpg");
+}
