--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -5,6 +5,10 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
+                  <div>
+                    <!-- Picture of self goes in this div -->
+                    <img id="jesse-image">
+                  </div>
 									<header>
 										<h2>Odio faucibus ipsum integer consequat</h2>
 										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
