changed some lorem ipsum. added functional navigation to most buttons and navbar. changed some icons

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,7 +1,12 @@
 
 
 #jesse-image {
-
+  width: inherit;
+  height: inherit;
+  display: inline-block;
+  border-radius: 50%;
+  border: 2px solid #3fc8ff;
+  top: -50%;
 }
 
 #one {
