--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<header id="header">
+<nav class="nav">
+ <div class="" id="navbarText">
+    <ul class="">
+      <li class="">
+        <a class="" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="">
+        <a class="" href="/projects">Projects</a>
+      </li>
+      <li class="">
+        <a class="" href="/future">Forward</a>
+      </li>
+      <li class="">
+        <a class="" href="/contact">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+</header>
