--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,18 @@
-			<!-- One -->
+<!-- Banner -->
+				<section id="banner">
+					<div class="content">
+						<header>
+							<h2>Jesse Lauesen</h2>
+              <p>Developer. Administrator. Builder. Creator.
+							</p>
+						</header>
+						<span class="image"><img src="yuyuheadshot.png" alt="" /></span>
+					</div>
+					<a href="#one" class="goto-next scrolly">Next</a>
+				</section>
+
+
+<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="geometric-banner.jpg" alt="" /></span>
 					<div class="content">
