added default structure to other pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/pixelfry" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:jjlauesen@proton.me" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: Jesse Lauesen</li>
+					</ul>
+				</footer>
