updated forward page to be about me page. added pics. navbar reflects change. added details on project and about me page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
         <a class="" href="/projects">Projects</a>
       </li>
       <li class="">
-        <a class="" href="/future">Forward</a>
+        <a class="" href="/future">About Me</a>
       </li>
       <li class="">
         <a class="" href="/contact">Contact</a>
