fixed up about me page

--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -12,12 +12,46 @@
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<h3>Where I have come from</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
+                    <p>Growing up in the bustling suburbs of Chicago during the 90s, I developed a
+unique blend of creativity and tenacity that has defined my personal and
+professional journey. From an early age, I was drawn to sports like gymnastics
+and volleyball, where my competitive spirit shone brightest. As captain of my
+traveling volleyball team, I led us to the national championships, securing a
+13th-place finish that still stands as one of my proudest achievements.
+</p>
+										<p>However, it wasn't just athletics that captured my imagination; I also had an
+insatiable curiosity for understanding how things worked. This curiosity often
+led me to disassemble various gadgets and appliances around the house, much to
+my parents' chagrin! As I grew older, my love for taking things apart evolved
+into a fascination with technology and its potential intersection with music.
+</p>
+										<p>In my teenage years, I discovered that the rhythm of music resonated deeply
+within me, and I decided to channel this passion through a career in recording
+engineering. Pursuing a college education allowed me to delve deeper into the
+fascinating world where art and technology intertwine, fueling my creativity and
+ambition. Today, this multifaceted background continues to inspire and inform my
+work, making me the unique professional I am today.</p>
 										<h3>Where I am</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<p>In recent years, I've embraced the thrill of being self-employed as a touring
+audio engineer, a role that allowed me to combine my passion for music with my
+technical skills on the road throughout North America. This journey exposed me
+not only to various venues and performances but also to network and IT
+infrastructure on a daily basis – an unexpected yet valuable learning
+experience.</p>
+                    <p>When COVID-19 lockdowns put the brakes on touring, I found myself pivoting into
+the exciting world of software development and embedded systems. Embracing this new challenge
+head-on, I've since transitioned into a full-stack developer role, where I've
+been honing my skills in developing small and large applications. I have also been working on programs for single board computers like raspberry pis, arduinos, and esp32s.</p>
+                    <p>My various roles in the software world have led me from Chicago, Illinois to Omaha, Nebraska. Most recently, I've relocated to beautiful Virginia Beach, Virginia, to embark on a new adventure as a family man. Each step of this journey has beena testament to my adaptability, resilience, and unwavering commitment to continuous learning and growth.
+</p>
                     <h3>Where I am going</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<p>As I continue on this exciting journey, I'm eagerly looking ahead to new opportunities for growth and innovation. My passion for technology drives me to acquire additional certifications in various IT fields, expanding my knowledge base and skillset. I aspire to develop both small and large applications, leveraging the power of AI to further increase output and efficiency.
+</p>
+                    <p>In the realm of future tech development, I strive to play an integral role by learning and adopting cutting-edge technologies as they emerge. To complement my technical expertise, I am also passionate about increasing my capabilities in automation, which will enable me to tackle complex problems with greater ease
+and precision.</p>
+                    <p>Beyond the digital world, I dream of starting a farm where I can grow my own produce, integrating technology to create a sustainable, efficient, and productive ecosystem. This venture represents a unique blend of my love for both technology and nature, and I'm excited to see how it will evolve in the years to come. Overall, my future goals encompass continued learning, growth, and innovation – always striving to stay at the forefront of technological
+advancements while maintaining a strong connection to the natural world.
+</p>
 									</section>
 
 							</div>
