--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -62,7 +62,7 @@
 							<h2>Moving Forward</h2>
 							<p>Looking ahead at the things still to come</p>
 						</header>
-						<p>The world is developing at an extraordinary pace. Many new and exciting things are on the horizon. These are the topics I intend to move towards.</p>
+						<p>Check out the 'About Me' page to learn more about my story and where I intend to spend my time and talents.</p>
 						<ul class="actions">
 							<li><a href="/future" class="button">Learn More</a></li>
 						</ul>
@@ -107,14 +107,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Looking forward to hearing from you</h2>
+							<p></p>
 						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
 					</div>
 				</section>
