--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -40,15 +40,14 @@
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<h3>Feral Love</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-
+										<p>Feral Love is a non-profit organization based out of the suburbs of Chicago. Their mission is help stray and feral cats be happy and healthy and where applicable, find them forever homes. I built their static site to help drive exposure and reach a wider audience on the web.</p>
                     <h5>Technologies Used</h5>
                     <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
+                        <li>Java</li>
+                        <li>Spring</li>
+                        <li>Angular</li>
+                        <li>PostgresSQL</li>
+                        <li>Node.js</li>
                     </ul>
 										<h3>Feature Proejct</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
@@ -61,7 +60,6 @@
 											<li>Lacinia mattis arcu nascetur lobortis.</li>
 										</ul>
 									</section>
-
 							</div>
 						</div>
 					</div>
