implemented pictures, changed some wording on landing

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,7 +6,7 @@
               <p>Developer. Administrator. Builder. Creator.
 							</p>
 						</header>
-						<span class="image"><img src="yuyuheadshot.png" alt="" /></span>
+						<span class="image"><img src="headshot.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -81,17 +81,17 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-server"></span>
 									<h3>Software Development</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Familiar with Agile and Waterfall SDLC, staying up to date on current and legacy technologies.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-brain"></span>
 									<h3>Artificial Intelligence</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Utilizing Artificial Intelligence to increase output, accuracy, and efficiency.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Embedded Systems</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Integrating software solutions with bare metal systems..</p>
 								</section>
 	  					</div>
 						</div>
@@ -107,7 +107,7 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Looking forward to hearing from you</h2>
+							<h2>Forward we move, together</h2>
 							<p></p>
 						</header>
 					</div>
