--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -10,7 +10,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="" alt="" /></a>
 										<h3>Where I have come from</h3>
                     <p>Growing up in the bustling suburbs of Chicago during the 90s, I developed a
 unique blend of creativity and tenacity that has defined my personal and
@@ -60,6 +60,10 @@ advancements while maintaining a strong connection to the natural world.
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
+											<a href="#" class="image fit"><img src="selfskyback.jpg" alt="" /></a>
+										</section>
+										<hr />
+										<section>
 											<h3>Contact Me</h3>
                       <p>The best place to reach me is my <a href="mailto:jjlauesen@proton.me">email</a>. However, you can check the page linked below for more options on how to contact me.</p>
 											<footer>
@@ -68,19 +72,7 @@ advancements while maintaining a strong connection to the natural world.
 												</ul>
 											</footer>
 										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
-
+                  </section>
 							</div>
 						</div>
 					</div>
