migrating to desktop

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -6,14 +6,28 @@
 							<p>Let's connect and see what we can make happen</p>
 						</header>
 
+						<div class="box alt">
+							<div class="row gtr-uniform">
+								<section class="col-4 col-6-medium col-12-xsmall">
+						<li><a href="mailto:jjlauesen@proton.me" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+									<span class="icon solid alt major fa-server"></span>
+									<h3>Email</h3>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+						<li><a href="https://github.com/pixelfry" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<span class="icon solid alt major fa-brain"></span>
+									<h3>Github</h3>
+								</section>
+								<section class="col-4 col-6-medium col-12-xsmall">
+									<span class="icon solid alt major fa-flask"></span>
+									<h3>LinkedIn</h3>
+								</section>
+	  					</div>
+						</div>
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="pexels-simon73-1323550.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="" alt="" /></a>
                 <h3>I can be found below</h3>
-                <p>
-
-                </p>
 							</section>
-
 					</div>
 				</div>
