changed centering and icons on contact page. changed image for about me page

--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -60,7 +60,7 @@ advancements while maintaining a strong connection to the natural world.
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a href="#" class="image fit"><img src="selfskyback.jpg" alt="" /></a>
+											<a href="#" class="image fit"><img src="bridge.jpg" alt="" /></a>
 										</section>
 										<hr />
 										<section>
