--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,29 +5,32 @@
 							<h2>Contact Me</h2>
 							<p>Let's connect and see what we can make happen</p>
 						</header>
-
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-						<li><a href="mailto:jjlauesen@proton.me" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-									<span class="icon solid alt major fa-server"></span>
-									<h3>Email</h3>
+                 <span class="icon solid alt major fa-envelope"></span>
+                  <a href="mailto:jjlauesen@proton.me">
+                   <h3>Email</h3>
+                  </a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-						<li><a href="https://github.com/pixelfry" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<span class="icon solid alt major fa-brain"></span>
+                 <span class="icon brands alt major fa-github"></span>
+                 <a href="https://github.com/pixelfry">
 									<h3>Github</h3>
+                 </a>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
+								 <span class="icon brands alt major fa-linkedin"></span>
+                 <a href="#">
 									<h3>LinkedIn</h3>
+                 </a>
 								</section>
 	  					</div>
 						</div>
 						<!-- Content -->
 							<section id="content">
 								<a href="#" class="image fit"><img src="" alt="" /></a>
-                <h3>I can be found below</h3>
+                <h3>Looking forward to meeting you</h3>
 							</section>
 					</div>
 				</div>
