--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -6,7 +6,7 @@
               <p>Developer. Administrator. Builder. Creator.
 							</p>
 						</header>
-						<span class="image"><img src="headshot.jpg" alt="" /></span>
+						<span class="image no-bg"><img src="headshot.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
