--- a/src/app/components/future/future.component.html
+++ b/src/app/components/future/future.component.html
@@ -10,7 +10,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="" alt="" /></a>
+										<a href="#" class="image fit"><img src="panorama-concert.jpg" alt="" /></a>
 										<h3>Where I have come from</h3>
                     <p>Growing up in the bustling suburbs of Chicago during the 90s, I developed a
 unique blend of creativity and tenacity that has defined my personal and
@@ -60,10 +60,6 @@ advancements while maintaining a strong connection to the natural world.
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a href="#" class="image fit"><img src="bridge.jpg" alt="" /></a>
-										</section>
-										<hr />
-										<section>
 											<h3>Contact Me</h3>
                       <p>The best place to reach me is my <a href="mailto:jjlauesen@proton.me">email</a>. However, you can check the page linked below for more options on how to contact me.</p>
 											<footer>
@@ -71,6 +67,10 @@ advancements while maintaining a strong connection to the natural world.
 													<li><a href="/contact" class="button">More</a></li>
 												</ul>
 											</footer>
+										</section>
+										<hr />
+                    <section>
+											<a href="#" class="image fit"><img src="bridge.jpg" alt="" /></a>
 										</section>
                   </section>
 							</div>
