made dynamic for smaller screens

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,3 +19,16 @@
   </div>
 </nav>
 </header>
+
+<div id="titleBar">
+  <a class="toggle" href="#navPanel"></a>
+  <span class="title">Jesse Lauesen</span>
+</div>
+<div id="navPanel">
+ <nav>
+   <a class="link depth-0" href="/">Home <span class="sr-only">(current)</span></a>
+   <a class="link depth-0" href="/projects">Projects</a>
+   <a class="link depth-0" href="/future">About Me</a>
+   <a class="link depth-0" href="/contact">Contact</a>
+ </nav>
+</div>
