--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -14,14 +14,16 @@
 
 <!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="geometric-banner.jpg" alt="" /></span>
+					<span class="image fit main"><img src="techworking.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
                     <!-- Picture of self goes in this div -->
-                    <img id="jesse-image" src="yuyuheadshot.png">
-									<header>
+                    <span class="image">
+                      <img id="jesse-image" src="yuyuheadshot.png">
+									  </span>
+                  <header>
 										<h2>Jesse Lauesen</h2>
 									</header>
 								</div>
@@ -40,7 +42,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="public/cyber-banner.jpg" alt="" /></span>
+					<span class="image fit main"><img src="pexels-luis-gomes-166706-546819.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Projects</h2>
@@ -56,7 +58,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="raspberrypi.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Moving Forward</h2>
