testing header, moved local file on apollonix

--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -28,3 +28,7 @@ span.icon.solid.alt.major {
 #three {
   background-image: url("../../../../public/raspberrypi.jpg");
 }
+
+.text-center {
+  text-align: center;
+}
