--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -17,12 +17,10 @@
 					<span class="image fit main"><img src="techworking.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
-							<div class="row">
-								<div class="col-4 col-12-medium">
+							<div class="row gtr-uniform">
+								<div class="col-4 col-12-medium text-center">
                     <!-- Picture of self goes in this div -->
-                    <span class="image">
                       <img id="jesse-image" src="yuyuheadshot.png">
-									  </span>
                   <header>
 										<h2>Jesse Lauesen</h2>
 									</header>
