--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,8 @@
  <div class="" id="navbarText">
     <ul class="">
       <li class="">
-        <a class="" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="" href="/">Home
+          <span class="sr-only">(current)</span></a>
       </li>
       <li class="">
         <a class="" href="/projects">Projects</a>
@@ -21,14 +22,16 @@
 </header>
 
 <div id="titleBar">
-  <a class="toggle" href="#navPanel"></a>
-  <span class="title">Jesse Lauesen</span>
+  <a class="toggle" href="navPanel"></a>
+  <span class="title">
+    <a href="/">Jesse Lauesen</a>
+  </span>
 </div>
+
 <div id="navPanel">
- <nav>
-   <a class="link depth-0" href="/">Home <span class="sr-only">(current)</span></a>
-   <a class="link depth-0" href="/projects">Projects</a>
-   <a class="link depth-0" href="/future">About Me</a>
-   <a class="link depth-0" href="/contact">Contact</a>
- </nav>
+  <nav>
+    <a class="link depth-0" href="/projects">Projects</a>
+    <a class="link depth-0" href="/future">About Me</a>
+    <a class="link depth-0" href="/conatc">Contact</a>
+  </nav>
 </div>
