removed unused about component. implemented angular routing

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,17 +4,17 @@
  <div class="" id="navbarText">
     <ul class="">
       <li class="">
-        <a class="" href="/">Home
+        <a class="" routerLink="/">Home
           <span class="sr-only">(current)</span></a>
       </li>
       <li class="">
-        <a class="" href="/projects">Projects</a>
+        <a class="" routerLink="/projects">Projects</a>
       </li>
       <li class="">
-        <a class="" href="/future">About Me</a>
+        <a class="" routerLink="/future">About Me</a>
       </li>
       <li class="">
-        <a class="" href="/contact">Contact</a>
+        <a class="" routerLink="/contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -24,14 +24,14 @@
 <div id="titleBar">
   <a class="toggle" href="navPanel"></a>
   <span class="title">
-    <a href="/">Jesse Lauesen</a>
+    <a routerLink="/">Jesse Lauesen</a>
   </span>
 </div>
 
 <div id="navPanel">
   <nav>
-    <a class="link depth-0" href="/projects">Projects</a>
-    <a class="link depth-0" href="/future">About Me</a>
-    <a class="link depth-0" href="/conatc">Contact</a>
+    <a class="link depth-0" routerLink="/projects">Projects</a>
+    <a class="link depth-0" routerLink="/future">About Me</a>
+    <a class="link depth-0" routerLink="/conatc">Contact</a>
   </nav>
 </div>
