--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -48,7 +48,7 @@
 						</header>
 						<p>A wide variety of tools and languages were used in these projects including Java, Angular, and Blender to name a few. Find out more on the Projects page</p>
 						<ul class="actions">
-							<li><a href="projects" class="button">Learn More</a></li>
+							<li><a routerLink="/projects" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -64,7 +64,7 @@
 						</header>
 						<p>Check out the 'About Me' page to learn more about my story and where I intend to spend my time and talents.</p>
 						<ul class="actions">
-							<li><a href="/future" class="button">Learn More</a></li>
+							<li><a routerLink="/future" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -97,7 +97,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="/contact" class="button">Contact Me</a></li>
+								<li><a routerLink="/contact" class="button">Contact Me</a></li>
 							</ul>
 						</footer>
 					</div>
