fixed scrolling issue between components when navigating from lower scrolling position

--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -47,17 +47,16 @@
                         <li>Spring</li>
                         <li>Angular</li>
                         <li>PostgresSQL</li>
-                        <li>Node.js</li>
+                        <li>Neovim</li>
                     </ul>
-										<h3>Feature Proejct</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+                    <a href="https://github.com/pixelfry/data-warehouse" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<h3>SQL Data Warehouse</h3>
+										<p>This project was designed as a portfolio piece, and showcases how to setup and run an OLAP (Online Analytical Processing) Datawarehouse. This database focuses on data analysis, aggregation, and reporting across large datasets. For this project Microsoft SQL Server was used</p>
                     <h5>Technologies Used</h5>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>Structured Query Language</li>
+											<li>Microsoft SQL Server</li>
+											<li>Neovim</li>
 										</ul>
 									</section>
 							</div>
